# micrograd

./: 1dcompute.cu  CMakeLists.txt  base_computes.cu  compute.cu  compute1d.cu  compute2d.cu  cuda_compute.cu  data.cpp  engine.cpp  engine.cu  main.cu  nn.cpp  tensor.cu
include/: base_compute.h  compute1d.h  compute2d.h  data.h  engine.h  tensor.h
src/: compute1d.cu  compute2d.cu  cuda_compute.cu  data.cpp  engine.cu  helper.cpp  main.cu  nn.cpp  tensor.cu
src/include/: base_compute.h  compute1d.h  compute2d.h  data.h  engine.h  helper.h  tensor.h
